#70 Fix accordion mobile menu

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -298,24 +298,25 @@
 .header__menu-open > .header__category-content > .header__category-items {
   display: flex;
   flex-direction: column;
+  overflow-y: hidden;
 }
 
 .header__accordion-container {
   display: grid;
-  position: absolute;
-  left: 0;
-  top: 0;
   background: var(--c-primary-white);
   width: 100%;
   padding: 0 16px;
-  transition: transform 0.5s ease-in-out;
-  transform: translateX(100%);
   height: 100%;
-  z-index: 1;
+  grid-template-rows: 0fr;
+  transition: grid-template-rows 500ms;
 }
 
 .header__menu-open > .header__accordion-container {
-  transform: translateX(0);
+  grid-template-rows: 1fr;
+}
+
+.header__menu-open > .header__link-accordion::after {
+  transform: rotate(0);
 }
 
 .header__accordion-content-wrapper {
